Added web API for querying virtualhere and opentpcast software information. OpenTPCast Control Panel will now display a notification and auto-refresh the browser while the TPCast is rebooting after making changes. Added installed OpenTPCast version to footer bar in control panel.

--- a/api/20-opentpcast.conf
+++ b/api/20-opentpcast.conf
@@ -1,4 +1,5 @@
 url.rewrite-if-not-file = (
-	"^/api/camera/(.*)$" => "/api.php?ctrl=camera$1",
+	"^/api/camera/(.*)$" => "/api.php?ctrl=camera_$1",
+	"^/api/info/(.*)$" => "/api.php?ctrl=info_$1",
 	"^/api/(.*)$" => "/api.php?ctrl=$1"
 )
